# C_compiler

./: .gitignore  CMakeLists.txt
include/: ast.h  lexer.h  parser.h  symbol_table.h  token.h
src/: ast.c  keywords.gperf  lex_keywords.c  lexer.c  main.c  parser.c  symbol_table.c
tests/: test_lexer.cpp  test_parser.cpp  test_symbol_table.cpp
